New insertions added

--- a/about.html
+++ b/about.html
@@ -10,5 +10,6 @@
     <h1>My School is beautiful with flaboyount</h1>
     <h1>The school is rated 10th rate</h1>
     <p>The area is attractive to the people around</p>
+    <a href="index.html">Know about me !!!</a>
 </body>
 </html>
