--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Cynthia Allan</h1>
     <p>Lorem</p>
    <p>All is well with my soul</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed maiores perspiciatis alias possimus. Quo voluptatum, eveniet sapiente odit esse consequuntur veritatis minima reprehenderit nesciunt, cupiditate, ducimus iusto soluta? In, explicabo.</p>
+   <a href="about.html">Excellent is the answer</a>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed maiores perspiciatis alias possimus. Quo voluptatum, eveniet sapiente odit esse consequuntur veritatis minima reprehenderit nesciunt, cupiditate, ducimus iusto soluta? In, explicabo.</p>
 </body>
 </html>
