--- a/about.html
+++ b/about.html
@@ -11,5 +11,6 @@
     <h1>The school is rated 10th rate</h1>
     <p>The area is attractive to the people around</p>
     <a href="index.html">Know about me !!!</a>
+    <p>Go liver <i class="fas fa-swimming-pool    "></i></p>
 </body>
 </html>
