add gitignore file

--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@
     <h1>The school is rated 10th rate</h1>
     <p>The area is attractive to the people around</p>
     <a href="index.html">Know about me !!!</a>
-    <p>Go liver <i class="fas fa-swimming-pool    "></i></p>
+    <p>Home of the forever young</p>
+    <p>THomas Addison</p>
+    <p>second line</p>
+    <p>third line</p>
+    <p>fourth line</p>
+    <p>fifth line</p>
+
 </body>
 </html>
