--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <h1>Contact number: 2</h1>
     <h2>0244703325</h2>
     <form action="heilhf"></form>
-    <input type="color" name="manei" id="">
     <input type="email" name="gimah9@hotmail.com" id="" placeholder="Enter your email address">
+    <input type="name" placeholder="Enter Name">
     <input type="submit">
 </body>
 </html>
