--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <title>Contact</title>
   </head>
   <body>
-    <h1>Contact Me</h1>
+    <h1>Contact Me!!!</h1>
     <div class="container">
 <br><br>
     <div class="input-group mb-3">
@@ -45,9 +45,6 @@
       <br><br>
       <button class="btn btn-primary">Submit</button>
     </div>
-
-
-
 
 
     <!-- Optional JavaScript; choose one of the two! -->
