--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
         </div>
         <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
       </div>
+      <input type="number" placeholder="Enter number">
       
       <div class="input-group">
         <div class="input-group-prepend">
